--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,8 @@
     <string name="facebook_app_id">294101641082812</string>
     <string name="fb_login_protocol_scheme">fb294101641082812</string>
     <string name="title_activity_mot_de_passe_oublie">MotDePasseOublieActivity</string>
+    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
+    <string name="facebook_application_id" translatable="false">294101641082812</string>
+    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
 
 </resources>
