--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">RugbyFantasyTop14</string>
-    <string name="action_sign_in_short">Register</string>
+    <string name="action_sign_in_short">S\'enregistrer</string>
     <string name="email">Email</string>
     <string name="minimum_password">Mot de passe trop court : entrez minimum 6 caractères !</string>
     <string name="auth_failed">Authentification a échoué</string>
@@ -16,18 +16,18 @@
     <string name="hint_name">Fullname</string>
     <string name="btn_login">LOGIN</string>
     <string name="btn_link_to_register">Pas encore inscrit ? Enregistre toi avec ton adresse mail maintenant !</string>
-    <string name="btn_link_to_login">Already registered. Login Me!</string>
+    <string name="btn_link_to_login">Déjà enregistré? Authentifie toi !</string>
     <string name="title_activity_reset_password">ResetPasswordActivity</string>
-    <string name="btn_forgot_password">Forgot your password?</string>
-    <string name="btn_reset_password">Reset Password</string>
+    <string name="btn_forgot_password">Mot de passe oublié?</string>
+    <string name="btn_reset_password">Réinitialiser mot de passe</string>
     <string name="btn_back"><![CDATA[<< Back]]></string>
-    <string name="hint_new_email">New Email</string>
-    <string name="btn_change">Change</string>
-    <string name="btn_send">Send</string>
-    <string name="btn_remove">Remove</string>
-    <string name="btn_sign_out">Sign Out</string>
-    <string name="lbl_forgot_password">Forgot password?</string>
-    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
+    <string name="hint_new_email">Nouvelle adresse mail</string>
+    <string name="btn_change">Changer</string>
+    <string name="btn_send">Envoyer</string>
+    <string name="btn_remove">Retirer</string>
+    <string name="btn_sign_out">Déconnexion</string>
+    <string name="lbl_forgot_password">Mot de passe oublié?</string>
+    <string name="forgot_password_msg">Nous avons juste besoin de ton adresse mail pour t\'envoyer un nouveau mot de passe.</string>
     <string name="facebook_app_id">294101641082812</string>
     <string name="fb_login_protocol_scheme">fb294101641082812</string>
     <string name="title_activity_mot_de_passe_oublie">MotDePasseOublieActivity</string>
